Modificações de layout

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -13,3 +13,19 @@
 .style9820 { 
   margin-left: 13px;
 }
+
+.style3072 { 
+  width: 50px;
+  position: absolute;
+  left: 0px;
+}
+
+.style5967 { 
+  margin-top: 0px;
+  margin-left: 2vw;
+}
+
+.style8735 { 
+  display: flex;
+  align-items: center;
+}
